--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "dotenv-webpack": "^2.0.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "exports-loader": "^1.1.0",
     "fast-glob": "^3.2.4",
     "lodash": "^4.17.20",
